Refactor collection management by removing handle field from Collection and CollectionDTO. Update related services and controllers to streamline collection creation and retrieval. Enhance product management to support fetching products by collection ID. Update UI components to reflect changes in collection structure.